<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CyActionBar</string>
    <string name="action_settings">Settings</string>
    
    <string name="action_search">Search</string>
    <string name="action_location_found">Location</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="activity_new_message">activity_new_message</string>

</resources>