<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Search / will display always -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon_96x96"
        android:showAsAction="ifRoom"
        android:title="@string/action_search"/>

    <!-- Location Found -->
    <item
        android:id="@+id/action_location_found"
        android:icon="@drawable/map_icon_96x96"
        android:showAsAction="ifRoom"
        android:title="@string/action_location_found"/>

    <!-- Refresh -->
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/refresh_icon_96x96"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh"/>

    <!-- Help -->
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/help_icon_96x96"
        android:showAsAction="ifRoom"
        android:title="@string/action_help"/>

    <!-- About -->
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/about_icon_96x96"
        android:showAsAction="ifRoom"
        android:title="@string/action_about" />

</menu>